update report; update way of path gen in MagicSquare